Tue Nov  2 19:55:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/CCM_DataReader.h:
        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
        * connectors/dds4ccm/impl/CCM_DataWriter.h:
        * connectors/dds4ccm/impl/CCM_DataWriter.cpp:
          Reorganized code.

Tue Nov  2 15:13:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_impl.mpb:
          Resolved link issues on Windows.

        * connectors/dds4ccm/impl/CCM_DataReader.h:
        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
        * connectors/dds4ccm/impl/CCM_DataWriter.h:
        * connectors/dds4ccm/impl/CCM_DataWriter.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.h:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.h:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/dds4ccm_impl.mpc:
          Implemented an extra CCM proxy.

        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver_exec.cpp:
          Due to extra proxy.

Tue Nov  2 13:37:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Interceptors/Name_Utilities.cpp:
          Fixed memory leak

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/NDDS_Latency_Sender.cpp:
          Fixed misuage of tokenizer

        * examples/DevGuideExamples/Messenger/descriptors/Application-flattened.cdp:
        * examples/DevGuideExamples/Messenger/descriptors/run_test.pl:
          Started to fix this example

Tue Nov  2 09:24:16 UTC 2010  Marijke Hengstmengel  <mhengstmengelt@remedy.nl>

        * tutorials/Quoter/Simple/03.html: